--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     text-align: center;
 }
 
+h1 {
+    font-family: 'Poppins', sans-serif;
+}
+
 /* Styling the Form */
 
 form {
@@ -14,6 +18,7 @@ form {
     margin: 50px auto;
     padding: 30px 20px;
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 /* Styling form-control class */
