--- a/style.css
+++ b/style.css
@@ -57,24 +57,43 @@ form {
     width: auto;
 }
 
-/* Styling Button */
 
-button {
-    background-color: #05c46b;
-    border: 1px solid #777;
-    border-radius: 5px;
-    font-family: inherit;
-    font-size: 21px;
-    width: 100%;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    cursor: pointer;
+
+/* CSS */
+.button-74 {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
-/* Styling button:hover */
-
-button:hover {
-    background-color: #039b54;
-    transform: scale(1.05);
-    transition: .1s ease-in-out;
+.button-74:hover {
+  background-color: rgb(180, 180, 180);
+  transform: scale(1.05);
+  transition: ease-in-out;
 }
+
+.button-74:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-74 {
+    min-width: 120px;
+    padding: 0 25px;
+  }
+}
+
